fix(dependencies): update dependencies and add wordcount program for spark